<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:paddingTop="116dp"
    android:paddingHorizontal="20dp">
    <TextView
        android:text="@string/username" />
    <EditText
        android:layout_gravity="fill_horizontal"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <TextView
        android:text="@string/password" />
    <EditText
        android:layout_gravity="fill_horizontal"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <Button
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/sign_in"
        android:enabled="false"/>
    <Button
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/sign_up"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</GridLayout>