<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".EventDisplayActivity">

        <!-- Headers -->
        <TableRow>
            <TextView
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <Space/>
        </TableRow>

        <!-- Data -->
        <TableRow
            android:id="@+id/row1"
            android:onClick="rowClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1_event"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1_date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1_time"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/delete_row1"
                android:layout_width="wrap_content"
                android:layout_height="50.5dp"
                android:layout_marginEnd="1dp"
                android:background="@color/white"
                android:contentDescription="@string/delete_row"
                android:onClick="deleteRow"
                android:src="@drawable/ic_delete" />
        </TableRow>

       <TableRow
           android:id="@+id/row2"
           android:onClick="rowClick">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2_event"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2_date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2_time"
                android:textColor="@color/black"
                android:textSize="12sp" />

           <ImageButton
               android:id="@+id/delete_row2"
               android:layout_width="wrap_content"
               android:layout_height="50.5dp"
               android:layout_marginEnd="1dp"
               android:background="@color/white"
               android:clickable="true"
               android:contentDescription="@string/delete_row"
               android:onClick="deleteRow"
               android:src="@drawable/ic_delete" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:onClick="rowClick">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3_event"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3_date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3_time"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/delete_row3"
                android:layout_width="wrap_content"
                android:layout_height="50.5dp"
                android:layout_marginEnd="1dp"
                android:background="@color/white"
                android:contentDescription="@string/delete_row"
                android:onClick="deleteRow"
                android:src="@drawable/ic_delete" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAccessibility="no"
        android:onClick="addData"/>

</androidx.constraintlayout.widget.ConstraintLayout>

